--- a/trip-planner/trains/network-map.html
+++ b/trip-planner/trains/network-map.html
@@ -4,21 +4,21 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Disruptions - Suburban & Regional Trains - Travel Info | Public Transport for Thornsbury (PTfT)</title>
+  <title>Network Map - Trains - Trip Planner | Public Transport for Thornsbury (PTfT)</title>
   <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="Disruptions - Suburban & Regional Trains - Travel Info | Public Transport for Thornsbury (PTfT)">
+  <meta property="og:title" content="Network Map - Trains - Trip Planner | Public Transport for Thornsbury (PTfT)">
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
-  <meta property="og:image" content="/rebrand/favicon.png">
+  <meta property="og:image" content="/img/favicon.png">
   <meta name="theme-color" content="#4c26a1" />
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="icon" href="/rebrand/favicon.png" sizes="any">
-  <link rel="apple-touch-icon" href="/rebrand/favicon.png">
+  <link rel="icon" href="/img/favicon.png" sizes="any">
+  <link rel="apple-touch-icon" href="/img/favicon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="/fonts/mozaic-geo.css" rel="stylesheet">
+  <link href="/fonts/ptft-sans.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone" rel="stylesheet">
   <link rel="stylesheet" href="/rebrand/docs.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.css">
@@ -51,7 +51,7 @@
       <div class="nsw-header__main">
         <div class="nsw-header__waratah">
             <a href="/">
-              <img src="/rebrand/PTfT-W.svg" alt="PTfT Logo" width="250px"/>
+              <img src="/img/PTfT-W.svg" alt="PTfT Logo" width="250px"/>
             </a>
         </div>       
       </div>
@@ -251,214 +251,30 @@
 </head>
 <body>
 
-<div class="nsw-section nsw-section--image" style="background-image: url(/img/works.png);">
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/netmap.png);">
   <div class="hero-search">
   </div>
 </div>
-
-
-
     <div class="nsw-hero-banner nsw-hero-banner--light">
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
           <p class="nsw-small">Metropolitan train network</p>
-          <h1>Disruptions</h1>
+          <h1>Network Map</h1>
         </div>
       </div>
     </div>
   </div> 
 
-<div class="nsw-disruption-grid">
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Avandale</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Aynsdale</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-      <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Droylsden</p>
-          <p class="nsw-small">Rollingstock maintained by Regional Express</p>
-        </div>
-      </div>
-    </div>
-  </div>    
-
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Epping</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Hawkescliffe</p>
-        </div>
-        </div>
-      </div>
-  </div>
-
-      <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Kyama Junction</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-     <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Lakeswood</p>
-        </div>
-      </div>
-    </div>
-  </div>   
-
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Muurinong</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Morphettville</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Saunderland (Extending to Croydon in 2026)</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Sherbourne</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Southmead</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-        <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Wellington</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Wynthorpe</p>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="nsw-m-right-md nsw-m-left-md nsw-p-top-md nsw-p-bottom-md">
+<div id="map_embed">
+    <script src="/js/pdfobject.js"></script>
+    <script>PDFObject.embed("/pdf/Thornsbury%20train%20network%20map.pdf", "#map_embed");</script>
+    <style>
+        .pdfobject-container { height: 30rem; }
+    </style>
 </div>
 </div>
-</div>
-
-  
 
   <br>
 <script src="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/js/main.min.js"></script>
@@ -468,7 +284,6 @@
 
 </body>
 </div>
-
 <footer class="nsw-footer">
   <div class="nsw-footer__lower">
     <div class="nsw-container">
