--- a/trip-planner/regional/disruptions.html
+++ b/trip-planner/regional/disruptions.html
@@ -266,6 +266,7 @@
     </div>
   </div> 
 
+<div class="nsw-m-right-md nsw-m-left-md">
 <div class="nsw-accordion js-accordion">
 
   <div class="nsw-accordion__title">Regional trains</div>
@@ -480,7 +481,7 @@
 </div>
 </div>
 </div>
-
+</div>  
   
 
   <br>
