--- a/trip-planner/trains/disruptions.html
+++ b/trip-planner/trains/disruptions.html
@@ -265,7 +265,7 @@
       </div>
     </div>
   </div> 
-
+<div class="nsw-m-right-md nsw-m-left-md">
 <div class="nsw-disruption-grid">
 
   <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
@@ -440,7 +440,7 @@
 </div>
 </div>
 </div>
-
+</div>
   
 
   <br>
