more pt changes

--- a/pt/index.html
+++ b/pt/index.html
@@ -75,7 +75,7 @@
   </div>
   <ul class="nsw-main-nav__list">
     <li>
-      <a href="/trip-planner">
+      <a href="/pt">
         <span>Trip Planner</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
@@ -94,7 +94,7 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="/trip-planner/">
+          <a href="/pt/">
             <span>Trip Planner</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
@@ -104,31 +104,31 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="/trip-planner/trains">
+            <a href="/pt/trains">
               <span>Trains</span>
             </a>
           </li>
 
           <li>
-            <a href="/trip-planner/light-rail">
+            <a href="/pt/light-rail">
               <span>Light Rail</span>
             </a>
           </li>
 
           <li>
-            <a href="/trip-planner/buses">
+            <a href="/pt/buses">
               <span>Buses</span>
             </a>
           </li>
 
           <li>
-            <a href="/trip-planner/metro">
+            <a href="/pt/metro">
               <span>Metro</span>
             </a>
           </li>
 
           <li>
-            <a href="/trip-planner/regional">
+            <a href="/pt/regional">
               <span>Regional Express (Trains & Coaches)</span>
             </a>
           </li>
@@ -284,7 +284,7 @@
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/trip-planner/trains">Suburban Trains</a>
+          <a href="/pt/trains">Suburban Trains</a>
         </div>
         <div class="nsw-card__copy">
           <p>Disrupions & Network Map</p>
@@ -298,7 +298,7 @@
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/trip-planner/light-rail">Light Rail</a>
+          <a href="/pt/light-rail">Light Rail</a>
         </div>
         <div class="nsw-card__copy">
           <p>Disruptions</p>
@@ -312,7 +312,7 @@
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/trip-planner/buses">Buses</a>
+          <a href="/pt/buses">Buses</a>
         </div>
         <div class="nsw-card__copy">
           <p>Disruptions</p>
@@ -326,7 +326,7 @@
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/trip-planner/regional">Regional Express (Trains & Coaches)</a>
+          <a href="/pt/regional">Regional Express (Trains & Coaches)</a>
         </div>
         <div class="nsw-card__copy">
           <p>Disruptions & Network Map</p>
@@ -340,7 +340,7 @@
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/trip-planner/metro">Metro</a>
+          <a href="/pt/metro">Metro</a>
         </div>
         <div class="nsw-card__copy">
           <p>Disruptions & Network Map</p>
