--- a/pt/trains/disruptions/scofield.html
+++ b/pt/trains/disruptions/scofield.html
@@ -93,7 +93,7 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="/travel-info/">
+          <a href="/pt/">
             <span>Travel Info</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
@@ -103,7 +103,7 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="/travel-info/trains">
+            <a href="/pt/trains">
               <span>Suburban & Regional Trains</span>
               <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
             </a>
@@ -121,25 +121,25 @@
               </div>
 
           <li>
-            <a href="/travel-info/trams">
+            <a href="/pt/trams">
               <span>Trams</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/buses">
+            <a href="/pt/buses">
               <span>Buses</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/coaches">
+            <a href="/pt/coaches">
               <span>Coaches</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/metro">
+            <a href="/pt/metro">
               <span>Metro</span>
             </a>
           </li>
@@ -341,16 +341,16 @@
         <a href="/">Home</a>
       </li>
       <li>
-        <a href="/travel-info">Travel Info</a>
+        <a href="/pt">Travel Info</a>
       </li>
       <li>
-        <a href="/travel-info/trains">Suburban & Regional Trains</a>
+        <a href="/pt/trains">Suburban & Regional Trains</a>
       </li>
       <li>
-        <a href="/travel-info/trains/disruptions">Disruptions</a>
+        <a href="/pt/trains/disruptions">Disruptions</a>
       </li>
       <li>
-        <a href="/travel-info/trains/disruptions/scofield">Inner Northwest Line</a>
+        <a href="/pt/trains/disruptions/scofield">Inner Northwest Line</a>
       </li>
     
   </ol>
@@ -430,7 +430,7 @@
             <div class="nsw-card">
               <div class="nsw-card__content">
                 <div class="nsw-card__title">
-                  <a href="/travel-info/trains/disruptions/scofield/parkridge-scofield.pdf">Northcastle Interchange to Saunderland Rail Replacement Map</a>
+                  <a href="/pt/trains/disruptions/scofield/parkridge-scofield.pdf">Northcastle Interchange to Saunderland Rail Replacement Map</a>
                   </div>
                 <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">download</span>
               </div>
