--- a/pt/trains/index.html
+++ b/pt/trains/index.html
@@ -76,7 +76,7 @@
   </div>
   <ul class="nsw-main-nav__list">
     <li>
-      <a href="/trip-planner">
+      <a href="/pt">
         <span>Trip Planner</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
@@ -95,7 +95,7 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="/trip-planner/">
+          <a href="/pt/">
             <span>Trip Planner</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
@@ -105,31 +105,31 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="/trip-planner/trains">
+            <a href="/pt/trains">
               <span>Trains</span>
             </a>
           </li>
 
           <li>
-            <a href="/trip-planner/light-rail">
+            <a href="/pt/light-rail">
               <span>Light Rail</span>
             </a>
           </li>
 
           <li>
-            <a href="/trip-planner/buses">
+            <a href="/pt/buses">
               <span>Buses</span>
             </a>
           </li>
 
           <li>
-            <a href="/trip-planner/metro">
+            <a href="/pt/metro">
               <span>Metro</span>
             </a>
           </li>
 
           <li>
-            <a href="/trip-planner/regional">
+            <a href="/pt/regional">
               <span>Regional Express (Trains & Coaches)</span>
             </a>
           </li>
