--- a/pt/buses/index.html
+++ b/pt/buses/index.html
@@ -94,7 +94,7 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="/travel-info/">
+          <a href="/pt/">
             <span>Travel Info</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
@@ -104,7 +104,7 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="/travel-info/trains">
+            <a href="/pt/trains">
               <span>Suburban & Regional Trains</span>
               <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
             </a>
@@ -122,25 +122,25 @@
               </div>
 
           <li>
-            <a href="/travel-info/trams">
+            <a href="/pt/trams">
               <span>Trams</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/buses">
+            <a href="/pt/buses">
               <span>Buses</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/coaches">
+            <a href="/pt/coaches">
               <span>Coaches</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/metro">
+            <a href="/pt/metro">
               <span>Metro</span>
             </a>
           </li>
@@ -342,10 +342,10 @@
         <a href="/">Home</a>
       </li>
       <li>
-        <a href="/travel-info">Travel Info</a>
+        <a href="/pt">Travel Info</a>
       </li>
       <li>
-        <a href="/travel-info/buses">Buses</a>
+        <a href="/pt/buses">Buses</a>
       </li>
   </ol>
 </nav> 
@@ -382,7 +382,7 @@
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/travel-info/buses/disruptions">Disruptions</a>
+          <a href="/pt/buses/disruptions">Disruptions</a>
         </div>
         <!-- <div class="nsw-card__copy">
           <p>With 3 new Metro lines connecting important services and towns, services starting October 2025 throughout</p>
